[gd_scene load_steps=11 format=2]

[ext_resource path="res://SPRITES/lock_3.png" type="Texture" id=1]
[ext_resource path="res://SPRITES/lock_2.png" type="Texture" id=2]
[ext_resource path="res://SPRITES/lock_1.png" type="Texture" id=3]
[ext_resource path="res://SCRIPTS/lock.gd" type="Script" id=4]
[ext_resource path="res://SPRITES/empty.png" type="Texture" id=5]
[ext_resource path="res://SPRITES/icon_e.png" type="Texture" id=6]
[ext_resource path="res://SPRITES/icon_d.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[node name="lock" type="Node2D"]
script = ExtResource( 4 )

[node name="lock" type="AnimatedSprite" parent="."]
position = Vector2( 800, 416 )
frames = SubResource( 1 )

[node name="wait" type="Timer" parent="."]
process_priority = 9999
wait_time = 2.0
one_shot = true

[node name="icon_e" type="AnimatedSprite" parent="."]
position = Vector2( 1472, 712 )
frames = SubResource( 2 )
playing = true

[node name="icon_d" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1472, 704 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
playing = true

[connection signal="timeout" from="wait" to="." method="_on_wait_timeout"]
